# eidetic-daemon

./: .gitignore  CHANGELOG.md  INTEGRATIONS.md  Makefile  README.md  SECURITY.md  SHIPPED.md  go.mod  go.sum  test_1_hour_hold.py
.claude/: settings.json
.claude/hooks/: eidetic_bootstrap_prime.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml  track-tag-check.yml
bench/: bench_concurrent_test.go  bench_retrieve_test.go  bench_write_test.go  seed.go
bridge/cloudflare/: README.md  worker.js  wrangler.toml
bridge/python/: README.md  pyproject.toml
bridge/python/eidetic_mcp/: __init__.py  client.py  reassemble.py  server.py
bridge/python/tests/: test_client.py  test_entry_point_v0_0_11.py  test_insert_dispatcher.py  test_instrumentation.py  test_nucleus_ask.py  test_nucleus_curate.py  test_nucleus_digest.py  test_nucleus_dispatcher.py  test_nucleus_link.py  test_nucleus_synth_dispatcher.py  test_nucleus_timeline.py  test_purge_confirm.py  test_query_dispatcher.py  test_reassemble.py  test_retrieve_by_id_dispatcher.py  test_search_dispatcher.py  test_status_dispatcher.py
cmd/eideticd/: capture_meta_test.go  ccr.go  init.go  init_test.go  install.go  install_test.go  main.go  uninstall.go  uninstall_test.go
cmd/eideticd-browse/: README.md  main.go  main_test.go
cmd/eideticd-compliance/: main.go  main_test.go
completions/: _eideticd  eideticd.bash
docs/: DECISIONS.md  DISTRIBUTION_AUTOPILOT.md  HOOKS.md  IMPLEMENTATION_PLAN.md  MARKETPLACE.md  OP_ASSISTANT_QUEUE.md  PHASE_2_DESIGN.md  PRICING.md  PROMPT.md  PRO_LAUNCH.md  SELF_HOSTED.md  SOVEREIGN_BRIDGE_ARCHITECTURE.md  SPEC.md  TEAM_LAUNCH.md  demo-video-script.md  demo.md  linkedin-post-2026-05-18.md  mcp-integration.md
docs/enterprise/: BAA_TEMPLATE.md  (+1 more)
scripts/: demo-smoke.sh  deploy-worker.sh  gen_pro_key.sh  import-chatgpt.sh  import-claude.sh  install.ps1  install.sh  launchd-compliance.plist  launchd.plist  retention-policy.example.json  smoke.sh  systemd-compliance.service  systemd-compliance.timer  systemd.service  uninstall.sh  verify-cross-compile.sh  weekly-digest.sh
(+134 files in other folders)
