[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eidetic-mcp"
version = "0.0.11"
description = "MCP stdio server bridging eidetic-daemon's UDS API to MCP clients (Cursor, Claude Code, Cline, ...)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    # MCP SDK is the only runtime dep. Client uses stdlib only.
    "mcp>=1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.scripts]
# v0.0.11: point at sync wrapper. main() is `async def`; pointing at it
# directly causes the script to call sys.exit(main()) which discards the
# unawaited coroutine (RuntimeWarning, exit 0, MCP client "Failed to connect").
eidetic-mcp = "eidetic_mcp.server:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["eidetic_mcp*"]
